$Id: Changelog.txt,v 1.509 2024/01/15 00:20:19 nanard Exp $

2024/01/15:
  fix SUBSCRIBE timeout compliance (should be >= 1800 seconds)
  PCP: fix enforcing min_lifetime minimum of 120secs
  CACHE-CONTROL: max-age=1800 in M-SEARCH response

2024/01/07:
  pf: fix for OpenBSD 7.4

VERSION 2.3.4 : released on 2024/01/04

2024/01/04:
  Fix parsing of action string in ExecuteSoapAction()

2023/06/29:
  Disable DeviceProtection service by default

2023/06/23:
  detect FDSSDP as a Microsoft client

2023/05/27:
  option enable_natpmp => enable_pcp_pmp
  add a short list of build-time options in --version output
  enable secure mode by default

VERSION 2.3.3 : released on 2023/02/17

2023/02/04:
  Fix PinholeVerification()

2023/01/28
  Fix updating of existing pinhole leasetime by AddPinhole

VERSION 2.3.2 : released on 2023/01/20

2023/01/15:
  Fix NFTables again (RULE_HANDLE using more than 32 bits)

2022/10/21:
  Add option to match rules description with regex

VERSION 2.3.1 : released on 2022/10/16

2022/10/10:
  NFTables : fix for Big Endian. iport was always read as 0

2022/08/06:
  Fixes DeletePCPMap() for "IPv6 pinholes" with netfilter_nftables backend

2022/06/02:
  Fixes "Port Triggering" with OpenBSD 4.7+

2022/05/18:
  improve configure script for cross builds

2022/02/19:
  prefer non-reserved over reserved addresses in getifaddr()
  pf: use external IP for NAT in double NAT setups
  miniupnpd.init.d.script: support nftables

VERSION 2.3.0 : released on 2022/01/23

2021/12/01:
  NFTables : use scripts to create table and chains
  (see https://github.com/miniupnp/miniupnp/pull/584)

2021/11/17:
  NFTables : use the nat chain for inet rules (Sven Auhagen)
  (see https://github.com/miniupnp/miniupnp/pull/562)

VERSION 2.2.3 : released on 2021/08/21

2021/08/18:
  lease file for IPv6 pinholes

2021/08/11:
  Detect Microsoft User-Agent: and force IGDv1 in that case

2021/06/18:
  Fails on config parsing and init errors.