@@ -18,7 +18,7 @@ clients on the LAN to ask for port redirections.
 .SH OPTIONS
 .TP
 .BI \-f " config_file"
-load the config from file. default is /etc/miniupnpd.conf.
+load the config from file.
 .TP
 .BI \-i " ext_ifname"
 interface used to connect to the internet.
